Make modules as part of Travis build
They are quick to build, and this ensures we keep them building OK as we make other changes.

--- a/.travis.yml
+++ b/.travis.yml
@@ -17,4 +17,6 @@ before_install:
 language:
     - cpp
 script:
-    - time ./configure && time make -j2
+    - mkdir build
+    - cd build
+    - time ../configure && time make modules && time make -j2
