Fix MSB8012 and consequent Link error with modules.
See https://stackoverflow.com/questions/4494028/warning-msb8012-make-sure-that-outdir-targetname-and-targetext-prope?utm_medium=organic&utm_source=google_rich_qa&utm_campaign=google_rich_qa for the gory details.

This error is not just a project upgraders error.  It can also happen when moving projects - as I found after recreating the projects afresh and still having the error.  The essential problem is that the configuration parameters are over determined, and hence can conflict.  It's compounded by there being no warning of conflicting parameters at project configuration time.

--- a/win/Projects/mod-nyq-bench/mod-nyq-bench.vcxproj
+++ b/win/Projects/mod-nyq-bench/mod-nyq-bench.vcxproj
@@ -39,11 +39,11 @@
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
-    <OutDir>$(ProjectDir)$(Configuration)\</OutDir>
+    <OutDir>$(SolutionDir)$(Configuration)\modules\</OutDir>
     <IntDir>$(ProjectDir)$(Configuration)\</IntDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
-    <OutDir>$(ProjectDir)$(Configuration)\</OutDir>
+    <OutDir>$(SolutionDir)$(Configuration)\modules\</OutDir>
     <IntDir>$(ProjectDir)$(Configuration)\</IntDir>
     <TargetExt>.dll</TargetExt>
   </PropertyGroup>
