--- a/win/Projects/libsoxr/libsoxr.vcxproj
+++ b/win/Projects/libsoxr/libsoxr.vcxproj
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<Project DefaultTargets="Build" ToolsVersion="12.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+<Project DefaultTargets="Build" ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup Label="ProjectConfigurations">
     <ProjectConfiguration Include="Debug|Win32">
       <Configuration>Debug</Configuration>
@@ -13,17 +13,18 @@
   <PropertyGroup Label="Globals">
     <ProjectGuid>{AF9AD75C-4785-4432-BAC3-ADAB1E7F1192}</ProjectGuid>
     <RootNamespace>libsoxr</RootNamespace>
+    <WindowsTargetPlatformVersion>10.0.17134.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'" Label="Configuration">
     <ConfigurationType>StaticLibrary</ConfigurationType>
-    <PlatformToolset>v120_xp</PlatformToolset>
+    <PlatformToolset>v141</PlatformToolset>
     <CharacterSet>MultiByte</CharacterSet>
     <WholeProgramOptimization>true</WholeProgramOptimization>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
     <ConfigurationType>StaticLibrary</ConfigurationType>
-    <PlatformToolset>v120</PlatformToolset>
+    <PlatformToolset>v141</PlatformToolset>
     <CharacterSet>MultiByte</CharacterSet>
     <WholeProgramOptimization>false</WholeProgramOptimization>
   </PropertyGroup>
@@ -76,20 +77,20 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="..\..\..\lib-src\libsoxr\src\cr.c" />
-	<ClCompile Include="..\..\..\lib-src\libsoxr\src\cr32.c" />
-	<ClCompile Include="..\..\..\lib-src\libsoxr\src\cr32s.c" />
-	<ClCompile Include="..\..\..\lib-src\libsoxr\src\cr64.c" />
-	<!-- <ClCompile Include="..\..\..\lib-src\libsoxr\src\cr64s.c" /> -->
-	<ClCompile Include="..\..\..\lib-src\libsoxr\src\data-io.c" />
-	<ClCompile Include="..\..\..\lib-src\libsoxr\src\dbesi0.c" />
-	<ClCompile Include="..\..\..\lib-src\libsoxr\src\fft4g32.c" />
+    <ClCompile Include="..\..\..\lib-src\libsoxr\src\cr32.c" />
+    <ClCompile Include="..\..\..\lib-src\libsoxr\src\cr32s.c" />
+    <ClCompile Include="..\..\..\lib-src\libsoxr\src\cr64.c" />
+    <!-- <ClCompile Include="..\..\..\lib-src\libsoxr\src\cr64s.c" /> -->
+    <ClCompile Include="..\..\..\lib-src\libsoxr\src\data-io.c" />
+    <ClCompile Include="..\..\..\lib-src\libsoxr\src\dbesi0.c" />
+    <ClCompile Include="..\..\..\lib-src\libsoxr\src\fft4g32.c" />
     <ClCompile Include="..\..\..\lib-src\libsoxr\src\fft4g64.c" />
     <ClCompile Include="..\..\..\lib-src\libsoxr\src\filter.c" />
     <ClCompile Include="..\..\..\lib-src\libsoxr\src\pffft32s.c" />
-	<!-- <ClCompile Include="..\..\..\lib-src\libsoxr\src\pffft64s.c" /> -->
+    <!-- <ClCompile Include="..\..\..\lib-src\libsoxr\src\pffft64s.c" /> -->
     <ClCompile Include="..\..\..\lib-src\libsoxr\src\soxr.c" />
-	<ClCompile Include="..\..\..\lib-src\libsoxr\src\util32s.c" />
-	<!-- <ClCompile Include="..\..\..\lib-src\libsoxr\src\util64s.c" /> -->
+    <ClCompile Include="..\..\..\lib-src\libsoxr\src\util32s.c" />
+    <!-- <ClCompile Include="..\..\..\lib-src\libsoxr\src\util64s.c" /> -->
     <ClCompile Include="..\..\..\lib-src\libsoxr\src\vr32.c" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
